feat: removed files added streams