@@ -14,17 +14,24 @@ import java.util.List;
 import java.util.Objects;
 import org.itmo.commands.wc.Wc;
 import org.itmo.utils.CommandInfo;
-import org.itmo.utils.CommandResultSaver;
-import org.itmo.utils.FileUtils;
+import org.itmo.utils.command.CommandResultSaver;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
 public class WcTests {
     @BeforeEach
-    public void setUp() throws IOException {
-        CommandResultSaver.createCommandResultFile();
-        CommandResultSaver.savePipeCommandResult("");
+    public void setUp() {
+        CommandResultSaver.initStreams();
+    }
+    
+    private void checkResult(String expected, CommandInfo info) {
+        Wc wc = new Wc(info);
+        assertDoesNotThrow(wc::execute);
+        String actual =
+            new String(CommandResultSaver.getOutputStream().toByteArray()).replaceAll("\r", "")
+                                                                          .replaceAll("\n", "");
+        assertEquals(expected, actual);
     }
     
     @Test
@@ -45,20 +52,10 @@ public class WcTests {
         checkResult(expected, commandInfo);
     }
     
-    private void checkResult(String expected, CommandInfo info) {
-        Wc wc = new Wc(info);
-        assertDoesNotThrow(wc::execute);
-        CommandResultSaver.saveCommandResult();
-        String actual =
-            FileUtils.loadFullContent(CommandResultSaver.getResult().toFile()).replace("\r", "")
-                .replace("\n", "");
-        assertEquals(expected, actual);
-    }
-    
     @Test
     public void shouldCountFromInputStream() {
         CommandInfo info = new CommandInfo(wc, Collections.emptyList(),
-            List.of(CommandResultSaver.getResultPath()));
+                                           Collections.emptyList());
         String test = "the force awakens ! \\";
         String expected = "\t1\t\t5\t\t21";
         InputStream forTests = new ByteArrayInputStream((test + "\n").getBytes());
@@ -80,7 +77,7 @@ public class WcTests {
     private String getFilePath(String fileName) throws URISyntaxException {
         return new File(
             Objects.requireNonNull(this.getClass().getClassLoader().getResource(fileName))
-                .toURI()).getAbsolutePath();
+                   .toURI()).getAbsolutePath();
     }
     
     @Test
@@ -102,7 +99,7 @@ public class WcTests {
     }
     
     @AfterEach
-    public void cleanUp() {
-        CommandResultSaver.deleteCommandResult();
+    public void cleanUp() throws IOException {
+        CommandResultSaver.closeStreams();
     }
 }
